public/css/style.css
/*Fonts*/ 

@font-face {
    font-family:'FinkHeavy';
    src: url("fonts/FinkHeavy.eot");
	  src: url('fonts/FinkHeavy.eot?#iefix') format('embedded-opentype'),
		url('fonts/FinkHeavy.woff2') format('woff2'),
		url('fonts/FinkHeavy.woff') format('woff'),
		url('fonts/FinkHeavy.svg#FinkHeavy') format('svg');
    font-weight: 400;
    font-style: normal;
    font-stretch: normal;
    unicode-range: U+0020-00FE;
}

html {
  font-size: 62.5%; 
  width: 100%;
}

.textHighlight {
font-family: FinkHeavy;
font-style: normal;
font-weight: 500;
font-size: 1.2em;
color: rgba(218, 127, 21);
}


/*-------- main body styles -----------*/

body {
  overflow-x: hidden;
  letter-spacing: 2px;
  width: 100%;
}

main {
  position: relative;
  min-height: 100vh;
}
/* ------ Navbar ----------------  */

.hide {
  display: none;
}  

.navbar-brand, .gameWelcome-section h2, .gallery-3d h1 {
font-family: FinkHeavy;
font-style: normal;
font-weight: 500;
font-size: 3em;
color: rgba(218, 127, 21, 0.53);
mix-blend-mode: normal;
-webkit-text-stroke-color: #9E5500;
-webkit-text-stroke-width: 2.00px;
} 

/* Set the border color to the desired color */
.custom-toggler .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke=' rgb(255,255,255) ' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.custom-toggler.navbar-toggler {
  background-color: rgba(218, 127, 21, 0.53)
} 

.navbar-brand:hover {
  color: rgba(218, 127, 21);
} 

.nav-item a.nav-link{
  font-family: 'Amatic SC', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 2.5em;
  border-radius: 5px;
  background-color: rgba(218, 127, 21, 0.7);
  color: #9E5500;
  transform: rotate(0.25deg);
  margin-right: 1em;
}    

.navbar-collapse.show  a.nav-link, .navbar-collapse.collapsing a.nav-link{
    padding-left: 10px;
} 

 .navbar-collapse.show li.nav-item, .navbar-collapse.collapsing li.nav-item {
   padding-bottom: 2px; 
 }


 .navbar-nav::after {
  background:url("http://www.clker.com/cliparts/2/u/D/u/a/T/gold-paw.svg"); 
  background-size: 250px;
  content: "";
  opacity: 0.2;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;     
}

.navbar-nav > li{

  padding-left:4px;
  padding-right:4px;
}

a.nav-link:hover{
 animation: shake 0.5s; 
  /* When the animation is finished, start again */
}  

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
} 

/*------------- Homepage ---------------*/


p, .community-page h1, .learn-page h1, .game-page h1 {
  font-family: 'Amatic SC', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 30px;
  line-height: 30px;
  color: #000000;
}

.welcome h1, .btn-primary, .btn-secondary, h3, h2 {
  font-family: FinkHeavy;
  font-style: normal;
  font-weight: 500;
  font-size: 40px;
  color: #000000;
} 

.tom {
  padding: 0;
} 


/*---- Homepage Game Section ----*/




.gameWelcome-section, .learn-section, footer {
  background-image: url("/images/background1.jpg");
  background-size: cover 100%;
}




.btn-primary, .btn-secondary {
 height: auto;
 background-color: white;
 border: 3px solid #9E5500;
 font-size: 3em;
 border-radius: 10px;

}

.btn-secondary {
  background-image: url("/images/background1.jpg");
  
}

.btn-primary:hover, .btn-secondary:hover {
  color: white;
  background-image: none;
  background-color: #9E5500;
  border: 3px solid white;
  
}  

.btn-secondary:focus {
  color: black;
}


.gameWelcome-section p {
  background-color: white;
  border-radius: 10px;
  padding: 5%;
}


/*---- Homepage Gallery Blathers Section ----*/
.blathers {
  padding-bottom: 50px;
  margin-top: -80px;}

  .gallery3d-section .text-block {
    margin-top: 50px;
  }

 
 


.learn-section p {
  background-color: white;
  border-radius: 10px;
}

.learn-section h2 {
  padding-right: 0;
} 

.gameWelcome-section h2 {
  font-size: 50px;
}

.navbar-brand {
  font-size: 25px;
}


/* Gallery 3D page */
.gallery-3d {
  background: url("../images/celeste-blathers-background.jpg");
  background-size: cover;
  height: 100%;
  overflow: hidden;
  background-position: 0px -100px;
  background-repeat: no-repeat;
}
.gallery-background {
  height: 700px;
}

  .gallery-3d h1 {
    font-size: 50px;
    color: white;
    -webkit-text-stroke: 2px black;
    
    
  }

  .gallery-3d p {
    color: white;
    font-size: 40px;
    line-height: 40px;
   
  }
  
 
  /* Community Page Login */

  .community-page {
    height: 600px;
    
  } 

  .community-buttons {
    padding-top: 400px;
  }
  .community-background-image {
   
    background: url("../images/community-background.jpg");
    background-size: cover;
    height: 100%;
    overflow: hidden;
    background-position: 0px 0px;
    
  }

  .community-page h1 {
    font-size: 40px;

  } 

  /* Learn PAGE */ 
  .card-img-top {
    
    object-fit: scale-down;
    background-color:thistle;
} 

.learn-page .card {
  border-radius: 10px;
} 

.learn-page .card-group .card:hover {
  box-shadow: 0px 40px 50px -20px rgb(175, 144, 175);
  z-index: 100;
}
.learn-page .card:hover .card-title{
  color: rgb(175, 144, 175);
}
.learn-page h5, .learn-page p {
  font-family: 'Gowun Dodum', sans-serif;
  font-size: 20px;
}

.learn-page h1 {
  font-size: 40px;
}
 
@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
} 

/*Game page initial screen */

.game-page {
  
  width: 100%;
  
  /* height: 600px; */
  
} 

.game-page .start-btn{
margin-bottom: 100px;
}
/* .game-page .img-fluid {
  max-height: 500px;
} */

.game-page h1 {
  color: white;
  font-size: 40px;
  line-height: 40px;
}

.game-page-background {
  
  background: url("../images/game-redd-background-2.jpg");
  background-size: cover;
  height: 100%;
  overflow: hidden;
  background-position: 0px 0px;
  
}

.game-paintings {
  height: auto;
}

.gamePainting:hover {
  box-shadow: 0px 40px 50px -20px rgb(194, 188, 194);
  z-index: 100;
  cursor: pointer;
}

.green {
  box-shadow: 20px 20px 20px 20px rgb(202, 227, 198);
}

.red {
  box-shadow: 20px 20px 20px 20px rgb(240, 163, 163);
}

h3 {
  font-size: 30px;
}

.finalScreen img {
  max-height: 600px;
}

/* .game-buttons {
  padding-top: 300px;
  
} */
/* // Small devices (tablets, 768px and up)
 */ 

 @media screen and (max-width: 600px) {
  .welcome h1, .btn-primary, .btn-secondary, h3, h2 {
    font-size: 30px;
  }
  
  .gameWelcome-section h2 {
    font-size: 40px;
  }

  .blathers {
    padding-bottom: 0px;
    margin-left: -60px;
    margin-top: -50px;
  
  }

  .gallery3d-section .text-block {
    margin-top: 0px;
  }

  .gallery3d-section .btn {
    margin-top: 20px;
  }

  .vermeergif {
    padding: 0px;
  }

  .community-section {
    overflow: hidden;
  }

  .community-section .btn {
    margin-top: -30px;
  }
.community-img {
  margin-right: -120px;
  height: 400px;
  margin-top: -20px;
  margin-bottom: -40px;
  
}
  .community-img img{
   
    width: auto;
    height: 300px;
    
    
  }

.gallery-3d h1 {
  font-size: 35px;
} 

.gallery-3d p {
  font-size: 30px;
}

.gallery-3d {
  background-position: -200px 0px;
  background-repeat: no-repeat;
}

.gallery-3d 
.community-page h1 {
  font-size: 40px;

} 

.gallery-3d .btn{
  margin-top: 300px;
  
}
.community-background-image {
  background-position: 0px 50px;
  background-size: 200%;
  background-repeat: no-repeat;
} 

.community-buttons {
  padding-top: 300px;
} 

.community-page {
  height: 500px;
} 

.game-page-background {
  background-position: center;
  background-repeat: no-repeat;
  height: 100vh;
}

.game-page-background h1 {
  font-size: 25px;
  line-height: 25px;
  color: whitesmoke;
}

.finalScreen h2, .btn {
  font-size: 25px;
}

.finalScreen .isabelle{
  margin-top: -100px;
}
}

@media (min-width: 601px) and (max-width: 800px) {
 .welcome h1, .btn-primary, .btn-secondary, h3, h2 {
    font-size: 30px;
  }
  .gallery-3d {
    background-position: 0px 0px;
  } 
  
  .gallery-content {
    margin-top: -100px;
  }

  .community-buttons {
    padding-top: 300px;
  } 

  .game-page-background h1 {
    font-size: 25px;
  }

  .game-page-background {
    background-position: center;
    height: 100vh;
  } 

  finalScreen .isabelle{
    height: 300px;
  }


} 


@media (min-width: 801px) and (max-width: 1025px) {
  .gallery-3d {
    background-position: 0px 0px;
  } 
  .gallery-content {
    margin-top: -100px;
  }

  
  
  
 
  
}

